# locationd

./: CMakeLists.txt
daemon/: CMakeLists.txt  main.cpp
daemon/data/: locationd.service.in  org.freedesktop.Geoclue.conf
data/: org.freedesktop.Geoclue.conf
lib/: CMakeLists.txt  accuracy.cpp  accuracy.h  geoclue1service.cpp  geoclue1service.h  geocluetypes.cpp  geocluetypes.h  ilocationprovider.h  locationdaemonclientresolver.cpp  locationdaemonclientresolver.h  locationdaemonmasterinterface.cpp  locationdaemonpositionresolver.cpp  locationdaemonpositionresolver.h  pluginmanager.cpp  pluginmanager.h  positionadaptor.cpp  positionadaptor.h  satelliteadaptor.cpp  satelliteadaptor.h  satinfofull.cpp  satinfofull.h  velocityadaptor.cpp  velocityadaptor.h
lib/xml/: gc-iface-address-full.xml  gc-iface-geoclue-full.xml  gc-iface-geocode-full.xml  gc-iface-master-client-full.xml  gc-iface-position-full.xml  gc-iface-reverse-geocode-full.xml  gc-iface-satellite-full.xml
master/: CMakeLists.txt  main.cpp  org.freedesktop.Geoclue.Master.service.in
plugins/: CMakeLists.txt
plugins/geoip/: CMakeLists.txt  geoipplugin.cpp  geoipplugin.h
plugins/gps/: CMakeLists.txt  gpsplugin.cpp  gpsplugin.h  nmeaparser.cpp  nmeaparser.h
plugins/ofono/: CMakeLists.txt  cellplugin.cpp  cellplugin.h
plugins/wifi/: CMakeLists.txt  wifiplugin.cpp  wifiplugin.h
src/: main.cpp
test/: qmltest.qml
